Implement responsive-ish layout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name="document-classification" content="EAH"/>
 		<meta name="robots" content="index, follow"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<link href= "css/stylesheet.css" rel="stylesheet" type="text/css" />
 		<link href= "css/mctabs.css" rel="stylesheet" type="text/css" />
 		<link rel="icon" type="image/vnd.microsoft.icon" href="images/favicon.ico" />
@@ -28,7 +29,6 @@
 
 		</script>
 		<!-- End Google Analytics -->
-
 
 		<script src="js/javascript-tabs.js" type="text/javascript"></script>
 
@@ -50,6 +50,11 @@
 		</div>
 
 		<div class="main" >
+		
+		<div class="background-image">
+			<img src="images/Web.png" width="1020px" width="550px"/>
+		</div>
+		
 		<div class="tabcontents">
 
 			<div id="Home">
@@ -116,7 +121,7 @@
 				</div>
 
 				<div id="Australia_B">
-					<strong> Werkvisum voor bedrijven -  Werkvergunningen tot 3 maanden voor <br/><em>specialized knowledge workers.</em></strong> <br/>
+					<strong> Werkvisum voor bedrijven -	 Werkvergunningen tot 3 maanden voor <br/><em>specialized knowledge workers.</em></strong> <br/>
 					Als uw bedrijf een opdracht heeft gekregen voor een project en zal het werk in princiepe niet langer duren dan 3 maanden, dan kunnen wij u snel helpen aan de juiste werkvergunning.
 					Mocht u vrijblijvend meer willen weten over wat wij voor u kunnen doen, neem dan <a href="index.html#Contact">contact</a> met ons op. <br/>
 					<br/>
@@ -132,7 +137,7 @@
 
 				<div id="Canada_B">
 					<strong>Werk visum Canada</strong>
-					Voor een aantal gevallen van zakendoen in Canada is een werkvergunning niet nodig.  Kijk
+					Voor een aantal gevallen van zakendoen in Canada is een werkvergunning niet nodig.	Kijk
 					<a href="http://www.cic.gc.ca/english/work/apply-who-nopermit.asp">hier</a> of u of de werknemers die u wilt
 					uitsturen naar Canada echt een werkvisum nodig zullen hebben. Als u of uw werknemer wel een werkvisum nodig
 					heeft dan zal meestal ook een <em>Labour Market Opinion</em> (LMO) moeten worden aangevraagd. Dat is een procedure die
@@ -195,7 +200,7 @@
 						in aanmerking te komen voor een permanente verblijfsvergunning voor Australi&euml;. Zelfs als u ouder bent dan 45 maar jonger dan 55 heeft u misschien nog een kans.
 						Neem zelf een kijkje naar de <a href="http://www.immi.gov.au/skilled/general-skilled-migration/pdf/csol.pdf" target="_blank">beroepenlijst</a> <br/>
 						<br/>
-						Wilt u meer weten over uw mogelijkheden? Stuur ons dan vrijblijvend een  <a href="mailto:paulhiltemann@ziggo.nl">e-mail</a> met uw C.V. <br/>
+						Wilt u meer weten over uw mogelijkheden? Stuur ons dan vrijblijvend een	 <a href="mailto:paulhiltemann@ziggo.nl">e-mail</a> met uw C.V. <br/>
 						<br/>
 
 						<strong> Working Holiday in Australi&euml; voor jongeren uit o.a. Nederland en Belgi&euml; vanaf 18 t/m 30 </strong><br/>
@@ -225,7 +230,7 @@
 						Dan hebben we misschien een baan voor u als vrachtwagen chauffeur in Canada en de VS bij een werkgever in New Brunswick.
 						Een werkvergunning en zelfs eventueel een permanente verblijfsvergunning kan worden geregeld voor geschikte kandidaten. <br/>
 						<br/>
-						<em>Belangstelling?  Stuur ons dan a.u.b. uw C.V.</em> </br>
+						<em>Belangstelling?	 Stuur ons dan a.u.b. uw C.V.</em> </br>
 						<br/>
 
 						<strong>Wilt u emigreren  naar Canada maar staat uw beroep niet op de beroepenlijst?</strong><br/>
@@ -254,7 +259,7 @@
 					<div id="NewZealand_P">
 						<strong> Beroepenlijst voor emigreren naar Nieuw-Zeeland als kennismigrant <br/>(Skilled Migrant) </strong> <br/>
 						Heeft u een relevant diploma, minstens een jaar relevante werkervaring en een werkaanbod in Nieuw-Zeeland voor onbepaalde tijd
-						in een beroep op de <em>List of Skilled Occupations</em> die  Nieuw-Zeeland hanteert voor kennismigranten?  Bent u ook redelijk vloeiend
+						in een beroep op de <em>List of Skilled Occupations</em> die  Nieuw-Zeeland hanteert voor kennismigranten?	Bent u ook redelijk vloeiend
 						in Engels en jonger dan 50? Dan komt u zeer waarschijnlijk in aanmerking voor een permanente verblijfsvergunning voor Nieuw-Zeeland
 						onder de <em>Skilled Migrant Category</em>. Ook als u ouder bent dan 50 zou u misschien in aanmerking komen, vooral als u een
 						hoge opleiding hebt en/of of vele jaren relevante werkervaring.<br/>
@@ -284,7 +289,7 @@
 						Dan hebben we misschien een baan voor u als vrachtwagen chauffeur in Canada en de VS bij een werkgever in New Brunswick.
 						Een werkvergunning en zelfs eventueel een permanente verblijfsvergunning kan worden geregeld voor geschikte kandidaten. <br/>
 						<br/>
-						<em>Belangstelling?  Stuur ons dan a.u.b. uw C.V.</em> </br>
+						<em>Belangstelling?	 Stuur ons dan a.u.b. uw C.V.</em> </br>
 						<br/>
 					</div>
 
@@ -374,7 +379,7 @@
 				nationaliteit toestaat. Belgi&euml;, Australi&euml;, Canada en Nieuw-Zeeland hebben geen probleem met dubbele nationaliteit.<br/>
 				<br/>
 
-				<strong>Q6:  Ik ga trouwen of ik woon al een jaar samen met iemand uit Australi&euml; of Canada en mijn partner is bereid mij te
+				<strong>Q6:	 Ik ga trouwen of ik woon al een jaar samen met iemand uit Australi&euml; of Canada en mijn partner is bereid mij te
 				sponsoren voor een permanent visum. Moet hij/zij voldoen aan  een inkomentoets? Moet ik een inburgeringscursus volgen?</strong><br/>
 				A: Nee, zolang uw partner niet afhankelijk is van een bijstandsuitkering is er geen probleem. U hoeft ook geen inburgeringscursus, noch een
 				taaltoets te doen om een permanente verblijfsvergunning te krijgen op basis van sponsoring door uw partner. <br/>
