update phone number

--- a/index.html
+++ b/index.html
@@ -436,8 +436,7 @@
 				2727 HG Zoetermeer <br/>
 				Nederland <br/>
 				<br/>
-				Telefoon: 079-341 42 59 <br/>
-				Fax: 079-341 42 59 <br/>
+				Telefoon: +31 644 657 859<br/>
 				E-mail:<a href="mailto:paulhiltemann@ziggo.nl">paulhiltemann@ziggo.nl</a> <br/>
 				<br/>
 				Paul Hiltemann heeft jarenlang gewerkt als immigratie specialist op de Canadese Ambassade in Den Haag. Hij heeft daarna als consulent altijd contact gehouden met de
