--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: main
 ---
 
-{% for post in paginator.posts %}
+{% for post in site.categories.countries %}
   <div class="chapter">
     <a href="{{post.url | prepend: site.baseurl}}">
       {% if post.img %}
