--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,31 +1,33 @@
 ---
-layout: default
+layout: country
 title: Contact
+img: contact.jpeg
+author: false
 permalink: /contact/
 ---
-<section class="contact">
-  <a href="{{site.baseurl}}/" class="button_back"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a>
-  
-  <div class="container_contact">
-  <h3 class="form_title">Send me message</h3>
 
-  <form action="https://formspree.io/{{site.email}}" method="post" class="form">
-    <div class="message js-form-message"></div>
-    <div class="form_group">
-        <input type="text" placeholder="Your name" name="name" class="form-input" required>
+<section class="author cf">
+    <div class="post_wrapper">
+      <div class="author_image">
+        <img src="/assets/img/paulhiltemann.jpg" alt="Author face">
+      </div>
+      <div class="author_info">
+        <h2>Emigratie Adviesbureau Hiltemann</h2>
+        <br/>
+        <strong>Bezoekadres</strong>
+        <p>
+        Paul Hiltemann <br/>
+        Fretweide 27 <br/>
+        2727 HG Zoetermeer <br/>
+        Nederland <br/>
+        <br>
+        <span class="author_phone"><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:+31 644 657 859">+31 644 657 859</a></span><br/>
+        <span class="author_email"><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:paulhiltemann@ziggo.nl">paulhiltemann@ziggo.nl</a></span>
+        <br/>
+        </p>
+
+        <p class="author_subtitle">Paul Hiltemann heeft jarenlang gewerkt als immigratie specialist op de Canadese Ambassade in Den Haag. Hij heeft daarna als consulent altijd contact gehouden met de diverse federale en provinciale instanties die het immigratie beleid van Canada bepalen en uitvoeren. Ook is hij helemaal thuis bij het Australische Department of Immigration and Border Protection (DIBP) en heeft hij een speciale relatie met de staat Tasmania en het Australian Capital Territory.</p>
+
+      </div>
     </div>
-    <div class="form_group">
-        <input type="email" placeholder="Your e-mail" name="_replyto" class="form-input" required>
-    </div>
-    <div class="form_group">
-        <input type="tel" placeholder="Your phone" name="form_tel" class="form-input">
-    </div>
-    <div class="form_group">
-        <textarea name="Message" placeholder="Message" cols="25" rows="6" class="form-textarea" required></textarea>
-    </div>
-    <div class="form_group">
-        <input type="submit" class="form_btn" value="Send">
-    </div>
-  </form>
-  </div>
-</section>
+  </section>
