--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@ layout: main
 <div class="entry_content">
 <section class="cf">
 
-<h2 style="margin-bottom:3rem;"> Onze Diensten </h2>
-
 <div class="row text-center">
-  <div class="col-md-3">
-    <a href="#servicesModal1" class="projects-link" data-toggle="modal">
-      <span class="fa-stack fa-4x">
+  <div class="col-md-3 dienst">
+    <a href="{{ site.baseurl }}/diensten/">
+      <span class="fa-stack fa-3x">
          <i class="fa fa-circle fa-stack-2x text-primary"></i>
          <i class="fa fa-check-circle fa-stack-1x fa-inverse"> </i>
       </span>
@@ -21,18 +19,18 @@ layout: main
 
   <div class="col-md-3">
     <a href="#servicesModal2" class="projects-link" data-toggle="modal">
-      <span class="fa-stack fa-4x">
+      <span class="fa-stack fa-3x">
          <i class="fa fa-circle fa-stack-2x text-primary"></i>
          <i class="fa fa-list-ol fa-stack-1x fa-inverse"> </i>
       </span>
     </a>
-    <h4 class="service-heading">Volledige Visum aanvraag</h4>
+    <h4 class="service-heading">Volledige Aanvraag</h4>
       <p class="text-muted">Efficiënte begeleiding en een gerichte belangenbehartiging bij de visumaanvraag in het kader van de wetgeving van het betreffende land.</p>
   </div>
 
   <div class="col-md-3">
     <a href="#servicesModal3" class="projects-link" data-toggle="modal">
-      <span class="fa-stack fa-4x">
+      <span class="fa-stack fa-3x">
          <i class="fa fa-circle fa-stack-2x text-primary"></i>
          <i class="fa fa-building fa-stack-1x fa-inverse"> </i>
       </span>
@@ -42,26 +40,27 @@ layout: main
   </div>
 
   <div class="col-md-3">
-    <span class="fa-stack fa-4x">
+    <span class="fa-stack fa-3x">
       <i class="fa fa-circle fa-stack-2x text-primary"></i>
       <i class="fa fa-handshake-o fa-stack-1x fa-inverse"> </i>
     </span>
-    <h4 class="service-heading">Beperkte begeleiding voor doe-het-zelvers</h4>
+    <h4 class="service-heading">Advies op uurbasis</h4>
     <p class="text-muted">Doet u de aanvraag liever zelf? Wij bieden ook op-maat begeleiding op uurbasis.</p>
   </div>
 </div>
-
-<p>
-<strong>Meer Informatie?</strong>
-Heeft u interesse in een van onze diensten? Neem dan <a href="{{ site.baseurl }}/contact/">contact</a> met ons op. Of klik hieronder op het gewenste land voor meer informatie.</p>
 </section>
+<p>
+Heeft u interesse in een van onze diensten? Neem dan <a href="{{ site.baseurl }}/contact/">contact</a> met ons op. Of klik hieronder op het gewenste land voor meer informatie.</p>
+
 </div>
 
+<!--
 <div class="entry_content">
 <section class="cf">
 <h2> Informatie per land </h2>
 </section>
 </div>
+-->
 
 {% for post in site.categories.countries %}
   <div class="chapter">
