background for country tiles

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ Heeft u interesse in een van onze diensten? Neem dan <a href="{{ site.baseurl }}
     <a href="{{post.url | prepend: site.baseurl}}">
       {% if post.img %}
         <img src={{ "/assets/img/" | prepend: site.baseurl | append: post.img }} alt="{{post.title}}">
+           <div class="country_inner"></div>
+        </img>
       {% endif %}
     </a>
     <a href="{{post.url | prepend: site.baseurl}}">
