update contact page

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -14,9 +14,9 @@ permalink: /contact/
       <div class="author_info">
         <h2>Emigratie Adviesbureau Hiltemann</h2>
         <br/>
+        <p>Paul Hiltemann </p>
         <strong>Bezoekadres</strong>
         <p>
-        Paul Hiltemann <br/>
         Fretweide 27 <br/>
         2727 HG Zoetermeer <br/>
         Nederland <br/>
