nieuw zeeland tekst en foto

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: main
       </span>
     </a>
     <h4 class="service-heading">Begeleiding voor Bedrijven</h4>
-    <p class="text-muted">Begeleiding bij het uitzenden van personeel, het opzetten van een bedrijf, of zaken doen in het buitenland.</p>
+    <p class="text-muted">Begeleiding bij zaken doen in het buitenland en bij het uitzenden van personeel.</p>
   </div>
 
   <div class="col-md-3">
@@ -50,7 +50,8 @@ layout: main
 </div>
 </section>
 <p>
-Heeft u interesse in een van onze diensten? Neem dan <a href="{{ site.baseurl }}/contact/">contact</a> met ons op. Of klik hieronder op het gewenste land voor meer informatie.</p>
+<h5> Heeft u interesse in een van onze diensten? Neem dan <a href="{{ site.baseurl }}/contact/">contact</a> met ons op. Of klik hieronder op het gewenste land voor meer informatie.</h5>
+</p>
 
 </div>
 
