--- a/_pages/about.html
+++ b/_pages/about.html
@@ -7,13 +7,12 @@ permalink: /about/
   <div class="about_box">
     <div class="author">
         <div class="author_image">
-          <img src="{{site.baseurl}}/assets/img/{% if site.author-pic %}{{site.author-pic}}{% endif %}" alt="Author image">
+          <img src="{{ site.baseurl }}/assets/img/{{ site.author-pic }}" alt="Photo of Paul Hiltemann">
         </div>
         <div class="author_info">
-          <h2 class="author_title">{% if site.author-name %}{{site.author-name}}{% else %}Dwayne Newman{% endif %}</h2>
-          <p class="author_subtitle">{% if site.about-author %}{{site.about-author}}{% else %}La croix godard blue bottle, vape iceland fingerstache cronut single-origin coffee lyft snackwave normcore small batch.{% endif %}</p>
-          <p class="author_subtitle">Brunch sustainable tote bag offal pitchfork, jean shorts readymade lomo poutine freegan sriracha palo santo fam hammock.</p>
+          <h2 class="author_title">{{ site.author-name }}</h2>
+          <p class="author_subtitle">{{ site.about-author }}</p>
         </div>
       </div>
-    </div> <!-- End Section Author -->
+    </div>
 </section>
