--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: main
   </section> <!-- End Section Services-->
 
   <p>
-  <h5> Heeft u interesse in een van onze diensten? Neem dan <a href="{{ site.baseurl }}/contact/">contact</a> met ons op. Of klik    hieronder op het gewenste land voor meer informatie.</h5>
+  <h5> <strong> Heeft u interesse in een van onze diensten? Neem dan <a href="{{ site.baseurl }}/contact/">contact</a> met ons op. Of klik    hieronder op het gewenste land voor meer informatie.</strong> </h5>
   </p>
 </div>
 
