nieuwe paatjes en tekst vs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: main
           <i class="fa fa-check-circle fa-stack-1x fa-inverse"> </i>
         </span>
         <h4 class="service-heading">Visum Check</h4>
-        <p class="text-muted">Wilt u weten of u in aanmerking komt voor een visum? Stuur vrijblijvend uw CV op, en wij beoordelen uw kansen binnen een week.</p>
+        <p class="text-muted">Wilt u weten of u in aanmerking komt voor een visum? Stuur vrijblijvend uw CV op, en wij beoordelen uw kansen binnen 3 werkdagen.</p>
       </div>
 
       <div class="col-md-3">
@@ -46,7 +46,7 @@ layout: main
   <p>
   <h5> <strong> Heeft u interesse in een van onze diensten? Neem dan <a href="{{ site.baseurl }}/contact/">contact</a> met ons op. Of klik    hieronder op het gewenste land voor meer informatie.</strong> </h5>
   </p>
-</div>
+</div>git
 
 {% for post in site.categories.countries %}
 <div class="chapter">
