--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ layout: main
   <p>
   <h5> <strong> Heeft u interesse in een van onze diensten? Neem dan <a href="{{ site.baseurl }}/contact/">contact</a> met ons op. Of klik    hieronder op het gewenste land voor meer informatie.</strong> </h5>
   </p>
-</div>git
+</div>
 
 {% for post in site.categories.countries %}
 <div class="chapter">
