add meta descriptions to all pages

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -2,6 +2,9 @@
 layout: default
 title: About
 permalink: /about/
+description: >
+  Paul Hiltemann is een van de meest ervaren emigratie consulenten van Nederland.
+  EAH helpt u verder bij het verkrijgen van het juiste visum voor uw situatie.
 ---
 <section class="about">
   <div class="about_box">
