--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -4,6 +4,9 @@ title: Contact
 img: contact.jpeg
 author: false
 permalink: /contact/
+description: >
+  Neem contact met ons op voor een vrijblijvend gesprek over het verkrijgen van een visum,
+  verblijfsvergunning, of werkvergunning passende bij uw situatie en land van bestemming.
 ---
 
 <!-- edit dad's info in _config.yaml file -->
