usa werkvisum stuk geschreven

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: main
               <i class="fa fa-check-circle fa-stack-1x fa-inverse"> </i>
             </span>
             <h4 class="service-heading">Visum Check</h4>
-            <p class="text-muted">Wilt u weten of u in aanmerking komt voor een visum? Stuur vrijblijvend uw CV op, en wij beoordelen uw kansen binnen 3 werkdagen.</p>
+            <p class="text-muted">Wilt u weten of u in aanmerking komt voor een visum? <a href="{{ site.baseurl }}/contact">Stuur vrijblijvend uw C.V. op</a>, en wij beoordelen uw kansen binnen 3 werkdagen.</p>
           </div>
           <div class="col-md-3">
             <span class="fa-stack fa-3x">
