rework main page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ layout: main
 ---
     <div class="entry_content">
       <section class="intro cf">
-        <h3 class="slogan"><a class="logo">EAH</a> - persoonlijke begeleiding tegen de laagste prijs</h3>
+        <h2 class="company"> Emigratie Adviesbureau Hiltemann </h2>
+
+        <h3 class="slogan"> persoonlijke begeleiding tegen de laagste prijs</h3>
         EAH zorgt al meer dan 20 jaar voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw-Zeeland, de Verenigde Staten, China, Japan en Taiwan. Voor zowel particulieren als bedrijven. Heeft u interesse in een ander land? Wij helpen u op weg en bieden op-maat advies.
         </section>
        <h5>EAH biedt de volgende diensten:</h5>
