--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: main
         <h2 class="company"> Emigratie Adviesbureau Hiltemann </h2>
 
         <h3 class="slogan"> persoonlijke begeleiding tegen de laagste prijs</h3>
-        EAH zorgt al meer dan 20 jaar voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw-Zeeland, de Verenigde Staten, China, Japan en Taiwan. Voor zowel particulieren als bedrijven. Heeft u interesse in een ander land? Wij helpen u op weg en bieden op-maat advies.
+        EAH zorgt al meer dan 20 jaar voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw-Zeeland, de Verenigde Staten, China en Taiwan. Voor zowel particulieren als bedrijven. Heeft u interesse in een ander land? Wij helpen u op weg en bieden op-maat advies.
         </section>
        <h5>EAH biedt de volgende diensten:</h5>
     </div> <!-- End Intro Section -->
